2011-01-11  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        REGRESSION(r71934) Can't type in search edit field on skin-one.com
        https://bugs.webkit.org/show_bug.cgi?id=52195

        Restored original (pre-71934) check in the test to ensure that
        selectstart does not propagate outside of the shadow DOM.

        Consolidated shadow-boundary-crossing-2.html into shadow-boundary-crossing.html.

        * fast/events/shadow-boundary-crossing-2-expected.txt: Renamed to
            shadow-boundary-crossing-expected.txt.
        * fast/events/shadow-boundary-crossing-2.html: Renamed to
            shadow-boundary-crossing.html.
        * fast/events/shadow-boundary-crossing-expected.txt: Removed.
        * fast/events/shadow-boundary-crossing.html: Removed after folding the
            test into the new shadow-boundary-crossing.html.

2011-01-11  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectation update.

        * platform/mac-snowleopard/Skipped:

2011-01-11  Michael Saboff  <msaboff@apple.com>

        Reviewed by Geoffrey Garen.

        Missing call to popTempSortVector() for exception case in JSArray::sort.
        https://bugs.webkit.org/show_bug.cgi?id=50718

        New test to validate balanced calls to pushTempSortVector() and
        popTempSortVector().

        * fast/js/array-sort-exception-expected.txt: Added.
        * fast/js/array-sort-exception.html: Added.
        * fast/js/script-tests/array-sort-exception.js: Added.
        (do_gc):
        (Item):
        (toString_throw):
        (test):

2011-01-11  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update.

        * platform/chromium-gpu/test_expectations.txt:
        * platform/chromium/test_expectations.txt:

2011-01-11  Nico Weber  <thakis@chromium.org>

        Unreviewed, test expectations.

        Another baseline for the recent skia roll.
        https://bugs.webkit.org/show_bug.cgi?id=52105
